--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const currentYear = new Date().getFullYear();
 <footer>
   <div class="group">
     <p>
-      Designed & Developed in Portland with <a href="https://astro.build/"
+      Designed & Developed in Bastia with <a href="https://astro.build/"
         >Astro</a
       >
       <Icon icon="rocket-launch" size="1.2em" />
@@ -14,8 +14,8 @@ const currentYear = new Date().getFullYear();
     <p>&copy; {currentYear} Diogo Ferreira</p>
   </div>
   <p class="socials">
-    <a href="https://twitter.com/me"> Twitter</a>
-    <a href="https://github.com/me"> GitHub</a>
+    <a href="https://www.linkedin.com/in/diogo-ferreira-2bastia/"> Linkedin</a>
+    <a href="https://github.com/Diogo2b"> GitHub</a>
     <a href="https://codepen.io/me"> CodePen</a>
   </p>
 </footer>
