--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -16,15 +16,21 @@ const iconLinks: {
   href: string;
   icon: keyof typeof iconPaths;
 }[] = [
-  { label: "Twitter", href: "https://twitter.com/me", icon: "twitter-logo" },
-  { label: "Twitch", href: "https://twitch.tv/me", icon: "twitch-logo" },
-  { label: "GitHub", href: "https://github.com/me", icon: "github-logo" },
-  { label: "CodePen", href: "https://codepen.io/me", icon: "codepen-logo" },
-  { label: "dribbble", href: "https://dribbble.com/me", icon: "dribbble-logo" },
   {
-    label: "YouTube",
-    href: "https://www.youtube.com/@me/",
-    icon: "youtube-logo",
+    label: "Instagram",
+    href: "https://instagram.com/Diogo2b",
+    icon: "instagram-logo",
+  },
+  {
+    label: "Linkedin",
+    href: "https://www.linkedin.com/in/diogo-ferreira-2bastia/",
+    icon: "linkedin-logo",
+  },
+  { label: "GitHub", href: "https://github.com/Diogo2b", icon: "github-logo" },
+  {
+    label: "Facebook",
+    href: "https://facebook.com/Diogo2b",
+    icon: "facebook-logo",
   },
 ];
 ---
