--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const projects = (await getCollection("work"))
       <header class="hero">
         <Hero
           title="Hello, my name is Diogo Ferreira"
-          tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+          tagline="I am a Creative Developer who is currently based in Bastia, Corsica."
           align="start"
         >
           <div class="roles">
@@ -45,7 +45,7 @@ const projects = (await getCollection("work"))
           alt="Diogo Ferreira smiling in a red plaid shirt and tortoise shell glasses"
           width="480"
           height="620"
-          src="/assets/portrait.jpeg"
+          src="/assets/portrait.jpg"
         />
       </header>
 
