--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ const currentYear = new Date().getFullYear();
   <p class="socials">
     <a href="https://www.linkedin.com/in/diogo-ferreira-2bastia/"> Linkedin</a>
     <a href="https://github.com/Diogo2b"> GitHub</a>
-    <a href="https://codepen.io/me"> CodePen</a>
+    <!-- <a href="https://codepen.io/me"> CodePen</a> -->
   </p>
 </footer>
 <style>
