--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,9 +6,10 @@ const currentYear = new Date().getFullYear();
 <footer>
   <div class="group">
     <p>
-      Designed & Developed in Bastia with <a href="https://astro.build/"
-        >Astro</a
+      Designed & Developed in Bastia by <a href="mailto:dioguinho2b@gmail.com"
+        >Diogo</a
       >
+
       <Icon icon="rocket-launch" size="1.2em" />
     </p>
     <p>&copy; {currentYear} Diogo Ferreira</p>
