--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,19 +30,21 @@ const projects = (await getCollection("work"))
     <div class="wrapper stack gap-8 lg:gap-20">
       <header class="hero">
         <Hero
-          title="Hello, my name is Diogo Ferreira"
-          tagline="I am a Creative Developer who is currently based in Bastia, Corsica."
+          title="Olá, je m'appelle Diogo "
+          tagline="Passionné par le développement web, je crée des solutions innovantes, à Bastia en Corse."
           align="start"
         >
           <div class="roles">
-            <Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-            <Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-            <Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+            <Pill><Icon icon="code" size="1.33em" /> Développeur Web</Pill>
+            <Pill
+              ><Icon icon="codepen-logo" size="1.33em" /> Passionné de Technologie</Pill
+            >
+            <Pill><Icon icon="rocket-launch" size="1.33em" /> Innovateur</Pill>
           </div>
         </Hero>
 
         <img
-          alt="Diogo Ferreira smiling in a red plaid shirt and tortoise shell glasses"
+          alt="Diogo Ferreira avec des lunettes rondes et une chemise bleue à pois, souriant légèrement dans un bureau éclairé par la lumière naturelle"
           width="480"
           height="620"
           src="/assets/portrait.jpg"
