--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -12,15 +12,17 @@ import Icon from "./Icon.astro";
     />
     <h2>Full Stack</h2>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+      Avec une expertise approfondie à la fois en frontend et en backend, je
+      crée des solutions complètes et intégrées qui répondent à tous les besoins
+      d'un projet web.
     </p>
   </div>
   <div class="stack gap-2 lg:gap-4">
     <Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-    <h2>Industry Leader 2</h2>
+    <h2>Innovateur Créatif</h2>
     <p>
-      Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor
-      elit.
+      Reconnu pour ma capacité à innover et à diriger des projets complexes, je
+      recherche toujours les meilleures pratiques et technologies émergentes.
     </p>
   </div>
   <div class="stack gap-2 lg:gap-4">
@@ -30,8 +32,12 @@ import Icon from "./Icon.astro";
       size="2.5rem"
       gradient
     />
-    <h2>Strategy-Minded</h2>
-    <p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+    <h2>Orienté Stratégie</h2>
+    <p>
+      Une planification minutieuse et une vision stratégique sont essentielles
+      pour chaque projet que j'entreprends, garantissant que tous les objectifs
+      soient atteints de manière efficace et efficiente.
+    </p>
   </div>
 </section>
 
