--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -4,7 +4,7 @@ import Icon from "./Icon.astro";
 ---
 
 <aside>
-  <h2>Intéressé pour qu'on travaille ensemble ?</h2>
+  <h2>Intéressé par mes compétences ?</h2>
   <CallToAction href="mailto:dioguinho2b@gmail.com">
     Envoyez moi un message
     <Icon icon="paper-plane-tilt" size="1.2em" />
