--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -27,15 +27,15 @@ import Hero from "../components/Hero.astro";
         <h2 class="section-title">Parcours</h2>
         <div class="content">
           <p>
-            Passionné par le développement web, je suis Diogo Ferreira, un
-            développeur basé à Bastia, Corse. J'ai commencé mon parcours dans la
-            programmation lors de mes études secondaires, où j'ai découvert mon
-            intérêt pour la création de solutions web innovantes. Après avoir
-            obtenu mon diplôme, j'ai poursuivi des études en informatique, ce
-            qui m'a permis d'approfondir mes connaissances en développement web
-            et d'acquérir des compétences en utilisant diverses technologies.
-            Actuellement, je continue à développer mes compétences tout en
-            travaillant sur des projets passionnants pour divers clients.
+            Passionné d'informatique depuis mon enfance, j'ai choisi de faire de
+            ma passion une reconversion professionnelle en me spécialisant dans
+            le développement web et d'applications. Ayant validé ma
+            certification de développeur web avec un diplôme de niveau Bac+2, et
+            initié un diplôme niveau Bac +3 je suis à la recherche d'un poste de
+            concepteur/développeur web (en alternance (renouvelable) dés
+            maintenant ou CDD/CDI à compter de Septembre 2024). Motivé, curieux
+            et rigoureux, je suis prêt à relever de nouveaux défis et à
+            contribuer au succès de votre entreprise.
           </p>
           <p>
             Tout au long de mon parcours professionnel, j'ai eu l'opportunité de
@@ -47,28 +47,29 @@ import Hero from "../components/Hero.astro";
             améliorer mes compétences.
           </p>
           <p>
-            En dehors du travail, je suis un passionné de technologie et j'aime
-            explorer les nouvelles tendances dans le développement web. Mon
-            objectif est de continuer à apprendre et à évoluer dans ce domaine
-            dynamique, en apportant des solutions efficaces et créatives aux
-            défis de mes clients.
+            En dehors du travail, je suis passionné par l'informatique et les
+            tendances technologiques, explorant constamment de nouvelles
+            innovations dans divers domaines.
           </p>
         </div>
       </section>
       <section>
         <h2 class="section-title">Éducation</h2>
         <div class="content">
-          <p>Baccalauréat Scientifique</p>
-          <p>Diplôme en Informatique - Université de Corse</p>
-          <p>Formation continue en Développement Web (en cours)</p>
+          <p>Concepteur d’applications Web et mobiles (Bac+3 - en cours)</p>
+          <p>Développeur d’applications Web et mobiles (Bac+2)</p>
+          <p>Bac Pro SEID (informatique et électronique) - 2009</p>
         </div>
       </section>
       <section>
         <h2 class="section-title">Compétences</h2>
         <div class="content">
           <p>
-            JavaScript, React.js, Next.js, PHP, Symfony, Laravel, SQL, MySQL,
-            PostgreSQL, CSS, Sass, TailwindCSS, Git, GitHub, GitLab
+            Tecnhos : JavaScript, React.js, Next.js, PHP, Symfony, SQL, CSS, Git
+          </p>
+          <p>
+            Soft Skills : Esprit d’équipe, curieux, dynamique, organisé, à
+            l'écoute
           </p>
         </div>
       </section>
