--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,6 +67,7 @@ import Hero from "../components/Hero.astro";
           <p>
             Tecnhos : JavaScript, React.js, Next.js, PHP, Symfony, SQL, CSS, Git
           </p>
+          <p>Mobile : Quelques expériencesavec Swift, Kotlin et Flutter</p>
           <p>
             Soft Skills : Esprit d’équipe, curieux, dynamique, organisé, à
             l'écoute
