--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@ import type { iconPaths } from "./IconPaths";
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
   { label: "Accueil", href: "/" },
-  { label: "Travail", href: "/work/" },
+  { label: "Projets", href: "/work/" },
   { label: "À propos", href: "/about/" },
 ];
 
