--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -14,14 +14,14 @@ const projects = (await getCollection("work")).sort(
 ---
 
 <BaseLayout
-  title="My Work | Diogo Ferreira"
+  title="Mon travail | Diogo Ferreira"
   description="Learn about Diogo Ferreira's most recent projects"
 >
   <div class="stack gap-20">
     <main class="wrapper stack gap-8">
       <Hero
-        title="My Work"
-        tagline="See my most recent projects below to get an idea of my past experience."
+        title="Mes Projets"
+        tagline="Consultez mes projets ci-dessous pour avoir une idée de mon expérience."
         align="start"
       />
       <Grid variant="offset">
