--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,6 +117,34 @@ const projects = (await getCollection("work"))
                   tech: "Git (GitHub, GitLab, etc)",
                   logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg",
                 },
+                {
+                  tech: "Symfony",
+                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/symfony/symfony-original.svg",
+                },
+                {
+                  tech: "Next.js",
+                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg",
+                },
+                {
+                  tech: "React.js",
+                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg",
+                },
+                {
+                  tech: "Astro.js",
+                  logo: "https://astro.build/assets/press/astro-icon-light.svg",
+                },
+                {
+                  tech: "Sass",
+                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg",
+                },
+                {
+                  tech: "Less",
+                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/less/less-plain-wordmark.svg",
+                },
+                {
+                  tech: "Elementor",
+                  logo: "https://upload.wikimedia.org/wikipedia/commons/4/4d/Elementor_logo.svg",
+                },
               ].map((item) => (
                 <li class="mention-card">
                   <img src={item.logo} alt={item.tech} class="tech-logo" />
