--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,7 +119,7 @@ const projects = (await getCollection("work"))
                 },
                 {
                   tech: "Symfony",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/symfony/symfony-original.svg",
+                  logo: "https://img.icons8.com/?size=100&id=78295&format=png&color=000000",
                 },
                 {
                   tech: "Next.js",
@@ -131,7 +131,7 @@ const projects = (await getCollection("work"))
                 },
                 {
                   tech: "Astro.js",
-                  logo: "https://astro.build/assets/press/astro-icon-light.svg",
+                  logo: "https://img.icons8.com/?size=100&id=kXuRhjMIeKhk&format=png&color=000000",
                 },
                 {
                   tech: "Sass",
@@ -143,7 +143,7 @@ const projects = (await getCollection("work"))
                 },
                 {
                   tech: "Elementor",
-                  logo: "https://upload.wikimedia.org/wikipedia/commons/4/4d/Elementor_logo.svg",
+                  logo: "https://img.icons8.com/?size=100&id=BnOyV43gP7fZ&format=png&color=000000",
                 },
               ].map((item) => (
                 <li class="mention-card">
