--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,7 +7,7 @@ interface Props {
 }
 
 const {
-  title = "Diogo Ferreira: Personal Site",
+  title = "Diogo Ferreira: Mon portfolio",
   description = "The personal site of Diogo Ferreira",
 } = Astro.props;
 ---
