--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,8 +15,13 @@ const currentYear = new Date().getFullYear();
     <p>&copy; {currentYear} Diogo Ferreira</p>
   </div>
   <p class="socials">
-    <a href="https://www.linkedin.com/in/diogo-ferreira-2bastia/"> Linkedin</a>
-    <a href="https://github.com/Diogo2b"> GitHub</a>
+    <a
+      href="https://www.linkedin.com/in/diogo-ferreira-2bastia/"
+      target="_blank"
+    >
+      Linkedin</a
+    >
+    <a href="https://github.com/Diogo2b" target="_blank"> GitHub</a>
     <!-- <a href="https://codepen.io/me"> CodePen</a> -->
   </p>
 </footer>
