--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -84,7 +84,7 @@ const iconLinks: {
       <div class="socials">
         {
           iconLinks.map(({ href, icon, label }) => (
-            <a href={href} class="social">
+            <a href={href} class="social" target="_blank">
               <span class="sr-only">{label}</span>
               <Icon icon={icon} />
             </a>
@@ -120,7 +120,7 @@ const iconLinks: {
       <div class="socials">
         {
           iconLinks.map(({ href, icon, label }) => (
-            <a href={href} class="social">
+            <a href={href} class="social" target="_blank">
               <span class="sr-only">{label}</span>
               <Icon icon={icon} />
             </a>
