--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -18,7 +18,7 @@ const iconLinks: {
 }[] = [
   {
     label: "Instagram",
-    href: "https://instagram.com/Diogo2b",
+    href: "https://instagram.com/diogo_apl",
     icon: "instagram-logo",
   },
   {
