--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ const currentYear = new Date().getFullYear();
 
       <Icon icon="rocket-launch" size="1.2em" />
     </p>
-    <p>&copy; {currentYear} Diogo Ferreira</p>
+    <p>&copy; {currentYear} Diogo Ferreira Test</p>
   </div>
   <p class="socials">
     <a
