update page in corsu

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,6 +8,8 @@ const textLinks: { label: string; href: string }[] = [
   { label: "Accueil", href: "/" },
   { label: "Projets", href: "/work/" },
   { label: "À propos", href: "/about/" },
+  { label: "À propositu", href: "/corsu/" },
+
 ];
 
 /** Icon links to social media — edit these with links to your profiles! */
