--- a/src/pages/corsu.astro
+++ b/src/pages/corsu.astro
@@ -55,7 +55,7 @@ import Hero from "../components/Hero.astro";
       <section>
         <h2 class="section-title">Educazione</h2>
         <div class="content">
-          <p>Cuncepitore d’applicazioni Web è mobili (Bac+3 - in corsu)</p>
+          <p>Cuncepitore d’applicazioni Web è mobili (Bac+3)</p>
           <p>Sviluppatore d’applicazioni Web è mobili (Bac+2)</p>
           <p>Bac Pro SEID (informatica è elettronica) - 2009</p>
         </div>
