--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const projects = (await getCollection("work"))
       <header class="hero">
         <Hero
           title="Olá, je m'appelle Diogo "
-          tagline="Passionné par le développement web, je crée des solutions innovantes, à Bastia en Corse."
+          tagline="Passionné par le développement web, je crée des solutions innovantes,en Haute-Corse."
           align="start"
         >
           <div class="roles">
