--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -9,7 +9,6 @@ const textLinks: { label: string; href: string }[] = [
   { label: "Projets", href: "/work/" },
   { label: "À propos", href: "/about/" },
   { label: "Corsican Life", href: "/corsu/" },
-
 ];
 
 /** Icon links to social media — edit these with links to your profiles! */
@@ -25,7 +24,7 @@ const iconLinks: {
   },
   {
     label: "Linkedin",
-    href: "https://www.linkedin.com/in/diogo-ferreira-2bastia/",
+    href: "https://www.linkedin.com/in/diogo2b/",
     icon: "linkedin-logo",
   },
   { label: "GitHub", href: "https://github.com/Diogo2b", icon: "github-logo" },
@@ -213,7 +212,8 @@ const iconLinks: {
 
   .menu-button[aria-expanded="true"] {
     color: var(--gray-0);
-    background: linear-gradient(180deg, var(--gray-600), transparent),
+    background:
+      linear-gradient(180deg, var(--gray-600), transparent),
       radial-gradient(var(--gray-900), var(--gray-800) 150%);
   }
 
