--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -5,7 +5,7 @@ import Icon from "./Icon.astro";
 
 <aside>
   <h2>Intéressé par mes compétences ?</h2>
-  <CallToAction href="mailto:dioguinho2b@gmail.com">
+  <CallToAction href="mailto:contact@diogo.corsica">
     Envoyez moi un message
     <Icon icon="paper-plane-tilt" size="1.2em" />
   </CallToAction>
