--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const currentYear = new Date().getFullYear();
 <footer>
   <div class="group">
     <p>
-      Designed & Developed in Bastia by <a href="mailto:dioguinho2b@gmail.com"
+      Designed & Developed in Bastia by <a href="mailto:contact@diogo.corsica"
         >Diogo</a
       >
 
@@ -15,12 +15,7 @@ const currentYear = new Date().getFullYear();
     <p>&copy; {currentYear} Diogo Ferreira</p>
   </div>
   <p class="socials">
-    <a
-      href="https://www.linkedin.com/in/diogo-ferreira-2bastia/"
-      target="_blank"
-    >
-      Linkedin</a
-    >
+    <a href="https://www.linkedin.com/in/diogo2b/" target="_blank"> Linkedin</a>
     <a href="https://github.com/Diogo2b" target="_blank"> GitHub</a>
     <!-- <a href="https://codepen.io/me"> CodePen</a> -->
   </p>
