feat: otimização de imagens com WebP (Squoosh)

--- a/src/pages/corsu.astro
+++ b/src/pages/corsu.astro
@@ -18,7 +18,7 @@ import Hero from "../components/Hero.astro";
         <img
           width="1553"
           height="873"
-          src="/assets/at-work.jpg"
+          src="/assets/at-work.webp"
           alt="Diogo Ferreira à u travagliu cù un culleghju"
         />
       </Hero>
@@ -32,18 +32,18 @@ import Hero from "../components/Hero.astro";
             u sviluppu web è d'applicazioni. Dopu à avè finitu u me certificatu
             di sviluppatore web cù un diploma di livellu Bac+2, è avendu
             iniziatu un diploma livellu Bac +3, sò in cerca di un postu di
-            Cuncepitore/Sviluppatore web (in alternanza da avà o CDD/CDI à partesi
-            di settembre 2024). Motivu, curiosu è rigorevule, sò prontu à
-            affruntà novi sfidi è à cuntribuisce à u successu di a vostra
+            Cuncepitore/Sviluppatore web (in alternanza da avà o CDD/CDI à
+            partesi di settembre 2024). Motivu, curiosu è rigorevule, sò prontu
+            à affruntà novi sfidi è à cuntribuisce à u successu di a vostra
             impresa.
           </p>
           <p>
             Duranti u me percorsu prufessiunale, aghju avutu l'uppurtunità di
-            travaglià cù diverse tecnulugie cum'è JavaScript, PHP, SQL, è CSS.
-            A mo manera di travaglià, centrata annantu à a satisfaczione di u cliente, è a mo
-            capacità d'adattà mi prestu à e nuove tecnulugie m'hà permessu di realizà
-            parechji prughjetti cumplessi. Sò sempre in cerca di nuove opportunità
-            per innovà è migliurà e mo cumpetenze.
+            travaglià cù diverse tecnulugie cum'è JavaScript, PHP, SQL, è CSS. A
+            mo manera di travaglià, centrata annantu à a satisfaczione di u
+            cliente, è a mo capacità d'adattà mi prestu à e nuove tecnulugie
+            m'hà permessu di realizà parechji prughjetti cumplessi. Sò sempre in
+            cerca di nuove opportunità per innovà è migliurà e mo cumpetenze.
           </p>
           <p>
             Fora di u travagliu, sò appassiunatu di l'informatica è e tendenze
@@ -64,7 +64,8 @@ import Hero from "../components/Hero.astro";
         <h2 class="section-title">Cumpetenze</h2>
         <div class="content">
           <p>
-            Tecnhulugie: JavaScript, React.js, Next.js, PHP, Symfony, SQL, CSS, Git
+            Tecnhulugie: JavaScript, React.js, Next.js, PHP, Symfony, SQL, CSS,
+            Git
           </p>
           <p>Mobile: Qualche sperienze cù Swift, Kotlin è Flutter</p>
           <p>
