--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -84,27 +84,34 @@ const { title, description } = Astro.props;
           --bg-image-footer: url("/assets/backgrounds/bg-footer-dark-1440w.webp");
         }
       }
-
       .backgrounds {
         min-height: 100%;
         isolation: isolate;
         background:
-					/*noise*/
-          url("/assets/backgrounds/noise.webp") top center/220px repeat,
-          /*footer*/ var(--bg-image-footer) bottom
-            center/var(--bg-gradient-size) no-repeat,
+    /*footer*/
+          var(--bg-image-footer) bottom center/var(--bg-gradient-size) no-repeat,
           /*header1*/ var(--bg-image-main-curves) top
             center/var(--bg-gradient-size) no-repeat,
           /*header2*/ var(--bg-image-main) top center/var(--bg-gradient-size)
             no-repeat,
           /*base*/ var(--gray-999);
-        background-blend-mode: /*noise*/
-          overlay,
-          /*footer*/ var(--bg-blend-mode),
+        background-blend-mode:
+    /*footer*/
+          var(--bg-blend-mode),
           /*header1*/ var(--bg-svg-blend-mode),
           /*header2*/ normal,
           /*base*/ normal;
       }
+      :root.bg-noise .backgrounds {
+        background-image:
+          url("/assets/backgrounds/noise.webp"), var(--bg-image-footer),
+          var(--bg-image-main-curves), var(--bg-image-main), var(--gray-999);
+
+        background-blend-mode:
+          overlay, var(--bg-blend-mode), var(--bg-svg-blend-mode), normal,
+          normal;
+      }
+
       @media (forced-colors: active) {
         /* Deactivate custom backgrounds for high contrast users. */
         .backgrounds {
@@ -114,5 +121,10 @@ const { title, description } = Astro.props;
         }
       }
     </style>
+    <script is:inline>
+      window.addEventListener("load", () => {
+        document.documentElement.classList.add("bg-noise");
+      });
+    </script>
   </body>
 </html>
