Add SVG icons for Next.js, PHP, React, SASS, and Symfony
- Added nextjs-original.svg icon
- Added php-original.svg icon
- Added react-original.svg icon
- Added sass-original.svg icon
- Added symfony-original.png icon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,51 +102,51 @@ const projects = (await getCollection("work"))
               [
                 {
                   tech: "CSS (Sass, TailwindCSS, etc)",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg",
+                  logo: "/assets/icons/css.svg",
                 },
                 {
                   tech: "PHP (Symfony, Laravel, etc)",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg",
+                  logo: "/assets/icons/php-original.svg",
                 },
                 {
                   tech: "JavaScript (React.js, Next.js, etc)",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg",
+                  logo: "/assets/icons/javascript-original.svg",
                 },
                 {
                   tech: "SQL (MySQL, PostgreSQL, etc)",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg",
+                  logo: "/assets/icons/mysql-original.svg",
                 },
                 {
                   tech: "Git (GitHub, GitLab, etc)",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg",
+                  logo: "/assets/icons/git-original.svg",
                 },
                 {
                   tech: "Symfony",
-                  logo: "https://img.icons8.com/?size=100&id=78295&format=png&color=000000",
+                  logo: "/assets/icons/symfony-original.png",
                 },
                 {
                   tech: "Next.js",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg",
+                  logo: "/assets/icons/nextjs-original.svg",
                 },
                 {
                   tech: "React.js",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg",
+                  logo: "/assets/icons/react-original.svg",
                 },
                 {
                   tech: "Astro.js",
-                  logo: "https://img.icons8.com/?size=100&id=kXuRhjMIeKhk&format=png&color=000000",
+                  logo: "/assets/icons/astro-original.png",
                 },
                 {
                   tech: "Sass",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg",
+                  logo: "/assets/icons/sass-original.svg",
                 },
                 {
                   tech: "Less",
-                  logo: "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/less/less-plain-wordmark.svg",
+                  logo: "/assets/icons/less-original.svg",
                 },
                 {
                   tech: "Elementor",
-                  logo: "https://img.icons8.com/?size=100&id=BnOyV43gP7fZ&format=png&color=000000",
+                  logo: "/assets/icons/elementor-original.png",
                 },
               ].map((item) => (
                 <li class="mention-card">
