--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -305,3 +305,14 @@ h5 {
     --bg-image-main: url("/assets/backgrounds/bg-main-dark-1440w.webp");
   }
 }
+.backgrounds {
+  min-height: 100%;
+  isolation: isolate;
+  background:
+    var(--bg-image-footer) bottom center/var(--bg-gradient-size) no-repeat,
+    var(--bg-image-main-curves) top center/var(--bg-gradient-size) no-repeat,
+    var(--bg-image-main) top center/var(--bg-gradient-size) no-repeat,
+    var(--gray-999);
+  background-blend-mode:
+    var(--bg-blend-mode), var(--bg-svg-blend-mode), normal, normal;
+}
