feat: ajouter des imports d'images de fond pour améliorer le design

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,7 +7,16 @@ import "../styles/global.css";
 import MainHead from "../components/MainHead.astro";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
-
+import bgMainLight from "../assets/backgrounds/bg-main-light.svg";
+import bgMainLight1440w from "../assets/backgrounds/bg-main-light-1440w.webp";
+import bgMainDark1440w from "../assets/backgrounds/bg-main-dark-1440w.webp";
+import bgSubtle1Light1440w from "../assets/backgrounds/bg-subtle-1-light-1440w.webp";
+import bgSubtle2Light1440w from "../assets/backgrounds/bg-subtle-2-light-1440w.webp";
+import bgFooterLight1440w from "../assets/backgrounds/bg-footer-light-1440w.webp";
+import bgSubtle1Dark1440w from "../assets/backgrounds/bg-subtle-1-dark-1440w.webp";
+import bgSubtle2Dark1440w from "../assets/backgrounds/bg-subtle-2-dark-1440w.webp";
+import bgFooterDark1440w from "../assets/backgrounds/bg-footer-dark-1440w.webp";
+import noise from "../assets/backgrounds/noise.webp";
 interface Props {
   title?: string | undefined;
   description?: string | undefined;
