feat: ajouter le préchargement des images pour améliorer les performances

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -23,8 +23,12 @@ const {
   rel="preload"
   as="style"
   href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&family=Rubik:wght@500;600&display=swap"
-  onload="this.onload=null;this.rel='stylesheet'"
 />
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&family=Rubik:wght@500;600&display=swap"
+/>
+
 <noscript>
   <link
     rel="stylesheet"
