--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,6 +13,14 @@ const { title, description } = Astro.props;
 
 <html lang="fr">
   <head>
+    <link
+  rel="preload"
+  as="image"
+  href="/assets/portrait.webp"
+  imagesrcset="/assets/portrait-300w.webp 300w, /assets/portrait.webp 400w"
+  imagesizes="(max-width: 768px) 100vw, 300px"
+/>
+
     <!-- 1. Pré-carrega o SVG do LCP -->
     <link
       rel="preload"
